# avx_test

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.sh
src/: main.cpp
